tree-optimization/97330 - fix bad load sinking

This fixes bad placement of sunk loads.

2020-10-08  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/97330
	* tree-ssa-sink.c (statement_sink_location): Avoid skipping
	PHIs when they dominate the insert location.

	* gcc.dg/torture/pr97330-1.c: New testcase.
	* gcc.dg/torture/pr97330-2.c: Likewise.