gcc/testsuite/gcc.dg/torture/pr97330-1.c
@@ -1,0 +1,19 @@
+/* { dg-do compile } */
+
+typedef int a;
+typedef char b;
+int c;
+void d(e, f, dst, g, avail, h) int e;
+b *f, *dst;
+a g, avail;
+int h;
+{
+  b i = *f;
+  if (e)
+    goto j;
+  while (avail) {
+    *dst = i;
+  j:
+    avail -= c;
+  }
+}
